--- a/index.html
+++ b/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>review-whisperer-nlp-lab</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="review-whisperer-nlp-lab" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <title>ThinkNLP – Learn NLP from Real Reviews</title>
+  <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32" />
+  <link rel="icon" href="/favicon-64x64.png" type="image/png" sizes="64x64" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-  <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="description"
+    content="Explore sentiment and topic analysis using real-world reviews in this interactive NLP learning platform." />
+  <meta name="author" content="ThinkNLP Team" />
+
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="ThinkNLP – NLP Learning Lab" />
+  <meta property="og:description"
+    content="Learn natural language processing by analyzing real-world customer reviews. Visual insights powered by AI." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/thinknlp-logo.png" /> <!-- update with your actual logo or logo URL -->
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@thinknlp_lab" /> <!-- optional if you make a Twitter account -->
+  <meta name="twitter:title" content="ThinkNLP – NLP Learning Platform" />
+  <meta name="twitter:description"
+    content="Upload reviews, explore sentiment and topic insights, and learn NLP step-by-step." />
+  <meta name="twitter:image" content="/thinknlp-logo.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+  <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
