add: improve seo by create sitemap and change robots.txt

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>ThinkNLP – Learn NLP from Real Reviews</title>
-  <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32" />
-  <link rel="icon" href="/favicon-64x64.png" type="image/png" sizes="64x64" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-
+  <title>ThinkNLP – AI-Powered Review & Sentiment Analyzer</title>
   <meta name="description"
     content="Explore sentiment and topic analysis using real-world reviews in this interactive NLP learning platform." />
   <meta name="author" content="ThinkNLP Team" />
+  <link rel="canonical" href="https://www.thinknlp.xyz/" />
+
+  <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32" />
+  <link rel="icon" href="/favicon-64x64.png" type="image/png" sizes="64x64" />
 
   <!-- Open Graph for social sharing -->
   <meta property="og:title" content="ThinkNLP – NLP Learning Lab" />
